crates/rhdl/tests/expect/roll_your_own_signed_fails.expect
  × RHDL Syntax Error
  ╰─▶ RHDL Syntax Error
     ╭─[/Users/samitbasu/Devel/rhdl/crates/rhdl/tests/type_rolling.rs:177:17]
 176 │         let h = h.val();
 177 │         let h = h.as_signed();
     ·                 ──────┬──────
     ·                       ╰── RHDL does not support the use of unary operators on this type
 178 │         signal(h)
     ╰────
  help: You cannot roll your own signed  operator in RHDL.  You should write a kernel and call it as a regular function.
